--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -143,7 +143,7 @@ jobs:
         run: docker buildx bake
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          CONTAINERBASE_CDN: ${{ vars.CONTAINERBASE_CDN }}
+          # CONTAINERBASE_CDN: ${{ vars.CONTAINERBASE_CDN }}
 
   distro:
     runs-on: ubuntu-latest
@@ -186,7 +186,7 @@ jobs:
         run: docker buildx bake test-distro
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          CONTAINERBASE_CDN: ${{ vars.CONTAINERBASE_CDN }}
+          # CONTAINERBASE_CDN: ${{ vars.CONTAINERBASE_CDN }}
 
   lang:
     runs-on: ubuntu-latest
@@ -250,4 +250,4 @@ jobs:
         run: docker buildx bake test
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          CONTAINERBASE_CDN: ${{ vars.CONTAINERBASE_CDN }}
+          # CONTAINERBASE_CDN: ${{ vars.CONTAINERBASE_CDN }}
